# SPECduration

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: ChiChi_Taichung78_90.txt  Haiti - Presa Sabaneta 360°.txt  Kern Country-USA.txt  LOMA PRIETA.txt  Petrolia - Cape Mendocino 0°.txt  Ridgecrest - China 0°.txt  San Fernado - en metros.txt  Superstition H (USA) - Imperial Wildlife 0°.txt  run_example.py
src/drs_duration/: alpha_scan.py  cli.py  fit.py  io.py  newmark.py  pipeline.py  plots.py  spectrum.py  window.py
src/specduration/: __init__.py  cli.py  fit.py  io.py  newmark.py  pipeline.py  plots.py  spectrum.py  window.py
