[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drs-duration"
version = "1.1.0"
description = "Spectral estimation of seismic duration from the Displacement Response Spectrum (DRS)"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Lizandro Jara Araoz" },
  { name = "Brandon Omar Burga Bustamante" },
  { name = "Cesar Morales Morales" }
]

license = { text = "MIT" }

keywords = [
  "seismic duration",
  "displacement response spectrum",
  "near-fault ground motion",
  "harmonic fitting",
  "Newmark-beta method",
  "structural dynamics",
  "reproducible research"
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "numba"
]

[project.scripts]
drs-duration = "drs_duration.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
