[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drs-duration"
version = "1.2.0"

description = "Robust spectral-domain estimation of seismic duration from the Displacement Response Spectrum (DRS)"

readme = "README.md"

requires-python = ">=3.9"

authors = [
  { name = "Lizandro Jara Araoz" },
  { name = "Brandon Omar Burga Bustamante" },
  { name = "Cesar Morales Morales" }
]

license = { text = "MIT" }

keywords = [
  "seismic duration",
  "spectral duration",
  "displacement response spectrum",
  "near-fault ground motion",
  "impulsive ground motion",
  "harmonic fitting",
  "spectral analysis",
  "structural dynamics",
  "Newmark-beta method",
  "scientific software",
  "reproducible research"
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "numba"
]

[project.urls]
Homepage = "https://github.com/Lizandro-Jara/drs-duration"
Repository = "https://github.com/Lizandro-Jara/drs-duration"

[project.scripts]
drs-duration = "drs_duration.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]