[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specduration"
version = "1.2.0"
description = "Spectral seismic duration estimation from the displacement response spectrum using a second-derivative window detector"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Lizandro Jara Araoz" },
  { name = "Brandon Omar Burga Bustamante" },
  { name = "Cesar Morales Morales" }
]

license = { text = "MIT" }

keywords = [
  "seismic duration",
  "spectral duration",
  "displacement response spectrum",
  "near-fault ground motion",
  "pulse-type ground motion",
  "spectral window detection",
  "second-derivative analysis",
  "spectral curvature",
  "harmonic fitting",
  "Newmark-beta method",
  "structural dynamics",
  "earthquake engineering",
  "scientific software",
  "reproducible research"
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "numba"
]

[project.urls]
Homepage = "https://github.com/Lizandro-Jara/drs-duration"
Repository = "https://github.com/Lizandro-Jara/drs-duration"

[project.scripts]
specduration = "specduration.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]